# embedded_cmake

./: .gitignore
buildsystem/: CMakeLists.txt  REAMME.md
buildsystem/example/: CMakeLists.txt  example.ld  hello.c
buildsystem/example/Include/Base_TS_T40D11M30I2R0/: anchors.xml  ant_generator.xml  plugin.xml
buildsystem/example/Include/Base_TS_T40D11M30I2R0/autosar/: Base.epd
buildsystem/example/Include/Base_TS_T40D11M30I2R0/config/: Base.xdm
buildsystem/example/Include/Base_TS_T40D11M30I2R0/generate_PC/include/: OsIf_ArchCfg.h  OsIf_Cfg.h  modules.h
buildsystem/example/Include/Base_TS_T40D11M30I2R0/generate_PC/src/: OsIf_Cfg.c
buildsystem/example/Include/Base_TS_T40D11M30I2R0/generate_swcd/swcd/: Base_Bswmd.arxml
buildsystem/example/Include/Base_TS_T40D11M30I2R0/header/: S32G274A.h  S32G274A_A53_GPR.h  S32G274A_ADC.h  S32G274A_ATP.h  S32G274A_BOOT.h  S32G274A_CAIU.h  S32G274A_CCTI_FAULT_CTRL.h  S32G274A_CM7_GPR.h  S32G274A_CMIU.h  S32G274A_CMU_FC.h  S32G274A_CMU_FM.h  S32G274A_COMMON.h  S32G274A_CRC.h  S32G274A_CSR.h  S32G274A_CTU.h  S32G274A_DDR_GPR.h  S32G274A_DDR_SUBSYSTEM.h  S32G274A_DFS.h  S32G274A_DIRU.h  S32G274A_DMA.h  S32G274A_DMAMUX.h  S32G274A_DMA_CRC.h  S32G274A_DMA_TCD.h  S32G274A_EIM.h  S32G274A_ERM.h  S32G274A_FCCU.h  S32G274A_FLEXCAN.h  S32G274A_FLEXRAY.h  S32G274A_FSC.h  S32G274A_FTM.h  S32G274A_FXOSC.h  S32G274A_GMAC.h  S32G274A_I2C.h  S32G274A_JDC.h  S32G274A_LINFLEXD.h  S32G274A_LLCE_CORE_TO_CORE.h  S32G274A_LLCE_SYSCTRL.h  S32G274A_MCM.h  S32G274A_MC_CGM.h  S32G274A_MC_CGM_1.h  (+257 more)
buildsystem/example/Include/Base_TS_T40D11M30I2R0/include/: Adc_MemMap.h  Base_MemMap.h  BasicTypes.h  Can_43_FLEXCAN_MemMap.h  Can_43_LLCE_MemMap.h  Can_GeneralTypes.h  Can_MemMap.h  ComStackTypes.h  ComStack_Cfg.h  ComStack_Types.h  Compiler.h  CompilerDefinition.h  Compiler_Cfg.h  Crc_MemMap.h  Crypto_MemMap.h  Csec_MemMap.h  Dem_MemMap.h  Det_MemMap.h  Devassert.h  Dio_MemMap.h  Ecum_MemMap.h  Eep_MemMap.h  EthSwitch_43_SJA1105P_MemMap.h  EthSwt_43_SJA11XX_MemMap.h  EthTrcv_43_PHY_MemMap.h  EthTrcv_43_TJA110X_MemMap.h  Eth_43_PFE_MemMap.h  Eth_GeneralTypes.h  Eth_MemMap.h  Fee_MemMap.h  Fls_MemMap.h  Fr_43_LLCE_MemMap.h  Fr_GeneralTypes.h  Fr_MemMap.h  Gpt_MemMap.h  I2c_MemMap.h  Icu_MemMap.h  IpVersionMacros.h  Lin_43_LLCE_MemMap.h  Lin_GeneralTypes.h  (+34 more)
buildsystem/example/Include/Base_TS_T40D11M30I2R0/src/: OsIf_Interrupts.c  OsIf_Timer_System.c  OsIf_Timer_System_Internal_Systick.c
buildsystem/example/Include/Base_TS_T40D11M30I2R0/wizard_data/: Clock_Ip_Cfg.c  Clock_Ip_Cfg.h  OsIf_ArchCfg.h  OsIf_Cfg.c  Siul2_Port_Ip_Cfg.h  Siul2_Port_Ip_Defines.h  main.c  modules.h
buildsystem/example/Include/Base_TS_T40D11M30I2R0/wizard_data/S32G2XX/: Clock_Ip_BOARD_InitPeripherals_PBcfg.c
buildsystem/example/Include/Base_TS_T40D11M30I2R0/wizard_data/S32G3XX/: Clock_Ip_BOARD_InitPeripherals_PBcfg.c  Clock_Ip_Cfg_Defines.h
buildsystem/example/Include/Base_TS_T40D11M30I2R0/wizard_data/S32R45/: Clock_Ip_BOARD_InitPeripherals_PBcfg.c  Clock_Ip_BOARD_InitPeripherals_PBcfg.h  Clock_Ip_Cfg_Defines.h
buildsystem/example/Include/Platform_TS_T40D11M30I2R0/: anchors.xml  ant_generator.xml  plugin.xml
buildsystem/example/Include/Platform_TS_T40D11M30I2R0/autosar/: Platform_s32g274a_bga525.epd  Platform_s32g338m_bga525.epd  Platform_s32g398a_bga525.epd  Platform_s32r45_bga780.epd
buildsystem/example/Include/Platform_TS_T40D11M30I2R0/build_files/diab/: linker_ram.dld  linker_ram_c0.dld  linker_ram_c0_s32g3xx.dld  linker_ram_c1.dld  linker_ram_c1_s32g3xx.dld  linker_ram_c2.dld  linker_ram_c2_s32g3xx.dld  linker_ram_c3_s32g3xx.dld  linker_ram_s32g3xx.dld
buildsystem/example/Include/Platform_TS_T40D11M30I2R0/build_files/gcc/: linker_ram.ld  linker_ram_c0.ld  linker_ram_c0_s32g3xx.ld  linker_ram_c1.ld  linker_ram_c1_s32g3xx.ld  linker_ram_c2.ld  linker_ram_c2_s32g3xx.ld  linker_ram_c3_s32g3xx.ld  linker_ram_s32g3xx.ld
buildsystem/example/Include/Platform_TS_T40D11M30I2R0/build_files/ghs/: linker_ram.ld  linker_ram_c0.ld  linker_ram_c0_s32g3xx.ld  linker_ram_c1.ld  linker_ram_c1_s32g3xx.ld  linker_ram_c2.ld  linker_ram_c2_s32g3xx.ld  linker_ram_c3_s32g3xx.ld  linker_ram_s32g3xx.ld
buildsystem/example/Include/Platform_TS_T40D11M30I2R0/config/: Platform.xdm
buildsystem/example/Include/Platform_TS_T40D11M30I2R0/generate/include/: IntCtrl_Ip_Cfg.h  IntCtrl_Ip_CfgDefines.h  Platform_Cfg.h  Platform_CfgDefines.h  Platform_Ipw_Cfg.h  System_Ip_Cfg.h  System_Ip_CfgDefines.h
buildsystem/example/Include/Platform_TS_T40D11M30I2R0/generate/src/: IntCtrl_Ip_Cfg.c  Platform_Cfg.c  Platform_Ipw_Cfg.c
buildsystem/example/Include/Platform_TS_T40D11M30I2R0/include/: IntCtrl_Ip.h  IntCtrl_Ip_TrustedFunctions.h  IntCtrl_Ip_TypesDef.h  Platform.h  Platform_Ipw.h  Platform_Ipw_TypesDef.h  Platform_TypesDef.h  System_Ip.h  System_Ip_DeviceRegisters.h
buildsystem/example/Include/Platform_TS_T40D11M30I2R0/src/: IntCtrl_Ip.c  Platform.c  Platform_Ipw.c  System_Ip.c
buildsystem/example/Include/Platform_TS_T40D11M30I2R0/startup/src/: nvic.c  (+2 more)
buildsystem/example/Project_Settings/Debugger/: TEST_M7_0_Debug_RAM_S32Debug.launch  TEST_M7_0_Release_RAM_S32Debug.launch
buildsystem/example/Project_Settings/Startup_Code/: exceptions.c  startup.c  startup_cm7.s
buildsystem/example/RTD/include/: Clock_Ip.h  Clock_Ip_Private.h  Clock_Ip_Specific.h  Clock_Ip_Types.h  OsIf.h  OsIf_Cfg_TypesDef.h  OsIf_Timer_Custom.h  OsIf_Timer_System.h  SchM_Mcu.h  SchM_Port.h  Siul2_Port_Ip.h  Siul2_Port_Ip_Types.h
buildsystem/example/RTD/src/: Clock_Ip.c  Clock_Ip_Data.c  Clock_Ip_Divider.c  Clock_Ip_DividerTrigger.c  Clock_Ip_ExtOsc.c  Clock_Ip_FracDiv.c  Clock_Ip_Gate.c  Clock_Ip_IntOsc.c  Clock_Ip_Monitor.c  Clock_Ip_Pll.c  Clock_Ip_ProgFreqSwitch.c  Clock_Ip_Selector.c  Clock_Ip_Specific.c  OsIf_Timer.c  SchM_Mcu.c  SchM_Port.c  Siul2_Port_Ip.c
buildsystem/example/board/: Siul2_Port_Ip_Cfg.c
buildsystem/example/generate/include/: Clock_Ip_BOARD_InitPeripherals_PBcfg.h  Clock_Ip_Cfg_Defines.h  OsIf_Cfg.h
buildsystem/example/include/: hello.h
make_lib/: CMakeLists.txt  REAMME.md
make_lib/example/: hello.c
(+9 files in other folders)
